# 541_project

./: README.md  logistic_regression_model.joblib  pyproject.toml
data/: derive_elapsed_time.py  drop_columns.py  drop_outliers.py  drop_user_answer.py  merge_kt1_with_kt2.py  observe_kt2.py  peak_10_kt2.py  process_kt2.py  read_kt1.py  replace_with_unknown.py  shrink_dataset.py
groupprojectassignment4/: load_data.py  neural_network.py  train_bert4rec_model.py  train_bert4rec_no_user_answer.py  train_logistic_regression_model.py  train_random_forest_model.py
